--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>รายงานสถานะการซ่อมผ้า</title>
     <style>
         :root {
-            --primary: #7986cb;
-            --primary-light: #aab6fe;
-            --primary-dark: #49599a;
-            --secondary: #ff8a65;
-            --secondary-light: #ffbb93;
+            --primary: #16325B;
+            --primary-light: #78B7D0;
+            --primary-dark: #227B94;
+            --secondary: #FFDC7F;
+            --secondary-light: #CBDCEB;
             --secondary-dark: #c75b39;
             --text-on-primary: #ffffff;
             --text-on-secondary: #000000;
