--- a/index.html
+++ b/index.html
@@ -467,11 +467,11 @@
         const customers = [
             {
                 id: 1,
-                name: "อุไร",
-                garment: "ขาด",
-                status: "กำลังซ่อม",
-                statusCode: "in-progress",
-                price: 20
+                name: "พงพง",
+                garment: "ขาขาด",
+                status: "รอผ้าปะ",
+                statusCode: "pending",
+                price: 10
             },
             // {
             //     id: 2,
