--- a/index.html
+++ b/index.html
@@ -469,8 +469,8 @@
                 id: 1,
                 name: "พงพง",
                 garment: "ขาขาด",
-                status: "รอผ้าปะ",
-                statusCode: "pending",
+                status: "เสร็จแล้ว",
+                statusCode: "completed",
                 price: 10
             },
             // {
