--- a/index.html
+++ b/index.html
@@ -454,9 +454,10 @@
     <div class="modal" id="payment-modal">
         <div class="modal-content">
             <button class="close-modal">&times;</button>
-            <h2 style="text-align: center;">ชำระเงิน</h2>
-            <div class="payment-amount" id="payment-amount">฿0.00</div>
+            <h2 style="text-align: center;">ผ่าน QR พร้อมเพย์</h2>
+            <div class="payment-amount" id="payment-amount" style="color:#e74c3c; font-size:50px;">฿0.00</div>
             <img class="qr-code" id="qr-code" src="" alt="QR Code for PromptPay">
+            <p style="text-align: center;">หรือกดเบอร์เพื่อคัดลอก </p>
             <div class="promptpay-number" id="promptpay-number" onclick="copyPromptPay()">0851422903</div>
             <div class="copy-success" id="copy-success">คัดลอกหมายเลขแล้ว!</div>
         </div>
