--- a/index.html
+++ b/index.html
@@ -513,9 +513,6 @@
             </div>
             <div class="no-results" id="pending-no-results" style="display: none;">ไม่พบรายการ</div>
         </div>
-        <footer>
-            <p>© 2025 คุณอุไร บริการซ่อมผ้า - ติดต่อสอบถาม: 085-142-2903</p>
-        </footer>
     </div>
     
     <div class="modal" id="payment-modal">
@@ -533,7 +530,10 @@
             </button>
         </div>
     </div>
-    
+    <footer>
+            <p>© 2025 คุณอุไร บริการซ่อมผ้า - ติดต่อสอบถาม: 085-142-2903</p>
+        </footer>
+</body>
     <script>
         // Sample customer data - Can be easily edited
         const customers = [
