--- a/index.html
+++ b/index.html
@@ -514,10 +514,8 @@
             <div class="no-results" id="pending-no-results" style="display: none;">ไม่พบรายการ</div>
         </div>
         <footer>
-    <p style="word-wrap: break-word; white-space: normal; font-size: 1rem; line-height: 1.5;">
-        © 2025 คุณอุไร บริการซ่อมผ้า - ติดต่อสอบถาม: 085-142-2903
-    </p>
-</footer>
+            <p>© 2025 คุณอุไร บริการซ่อมผ้า <br> ติดต่อสอบถาม: 085-142-2903</p>
+        </footer>
     </div>
     
     <div class="modal" id="payment-modal">
