--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                 id: 1,
                 name: "พงพง",
                 garment: "ขาขาด",
-                status: "เสร็จแล้ว",
+                status: "เสร็จแล้ว 11/3/68",
                 statusCode: "completed",
                 price: 10
             },
