--- a/index.html
+++ b/index.html
@@ -545,30 +545,30 @@
                 statusCode: "completed",
                 price: 10
             },
-            // {
-            //     id: 2,
-            //     name: "วิชัย ใจดี",
-            //     garment: "กางเกงยีนส์ ขาขาด",
-            //     status: "เสร็จแล้ว",
-            //     statusCode: "completed",
-            //     price: 200
-            // },
-            // {
-            //     id: 3,
-            //     name: "นภา สมบูรณ์",
-            //     garment: "ชุดไทยผ้าไหม ตะเข็บหลุด",
-            //     status: "รอดำเนินการ",
-            //     statusCode: "pending",
-            //     price: 350
-            // },
-            // {
-            //     id: 4,
-            //     name: "ประเสริฐ รักเรียน",
-            //     garment: "เสื้อสูทสีดำ กระดุมหลุด",
-            //     status: "รอดำเนินการ",
-            //     statusCode: "pending",
-            //     price: 180
-            // }
+            {
+                id: 2,
+                name: "นายไปร์ท",
+                garment: "กางเกงยีนส์ ซิปแตก",
+                status: "รอซิป",
+                statusCode: "pending",
+                price: 30
+            },
+            {
+                id: 3,
+                name: "นางเฟิน",
+                garment: "ตะเข็บหลุด",
+                status: "ซ่อมอยู่",
+                statusCode: "in-progress",
+                price: 35
+            },
+            {
+                id: 4,
+                name: "นางเหมย",
+                garment: "กระดุมหลุด",
+                status: "รอดำเนินการ",
+                statusCode: "pending",
+                price: 18
+            }
         ];
         
         // DOM elements
