--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                 id: 4,
                 name: "นางเหมย",
                 garment: "กระดุมหลุด",
-                status: "รอดำเนินการ",
+                status: "ไม่มีกระดุมอะ",
                 statusCode: "pending",
                 price: 18
             }
