--- a/index.html
+++ b/index.html
@@ -568,6 +568,14 @@
                 status: "ไม่มีกระดุมอะ",
                 statusCode: "pending",
                 price: 18
+            },
+            {
+                id: 5,
+                name: "ตาบูรณ์",
+                garment: "ตัดขา",
+                status: "ซ่อมอยู่",
+                statusCode: "in-progress",
+                price: 18
             }
         ];
         
