--- a/promptpay.html
+++ b/promptpay.html
@@ -343,7 +343,7 @@
         </div>
         
         <footer>
-            <p>&copy; 2025 ระบบชำระเงิน PromptPay คุณอุไร. สงวนลิขสิทธิ์.</p>
+            <p>&copy; 2025 ระบบชำระเงิน PromptPay <br> คุณอุไร. สงวนลิขสิทธิ์.</p>
         </footer>
     </div>
     
